# GaussianSplattingViewer

./: .gitignore  colormaps111.py  main.py  pyproject.toml  renderer_cuda.py  renderer_ogl.py  util.py  util_gau.py
submodules/: diff_gaussian_rasterization_rmurai0610-0.0.0-cp311-cp311-win_amd64.whl  simple_knn-0.0.0+cu121-cp311-cp311-win_amd64.whl
