[tool.poetry]
name = "GaussianSplattingViewer-my"
version = "0.1.0"
description = ""
authors = ["nk4517 <nk4517@proton.me>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
torch = {version = "2.2.0+cu121", source = "pytorch"}
tqdm = "4.65.2"
opencv-python = ">=4.8,<5.0"
einops = "^0.7.0"
plyfile = "^1.0.3"
pygltflib = "^1.16.1"
torchvision = {version = "^0.17.0+cu121", source = "pytorch"}
nvdiffrast = {git = "https://github.com/NVlabs/nvdiffrast.git"}
simple-knn = {path = "submodules/simple_knn-0.0.0+cu121-cp311-cp311-win_amd64.whl"}
cuda-python = "12.1"
cupy-cuda12x = "^13.0.0"
glfw = "^2.7.0"
pyopengl = "^3.1.7"
imgui = "^2.0.0"
imgui-bundle = "^1.3.0"
imagecodecs = "^2024.1.1"
pyglm = "^2.7.1"
diff-gaussian-rasterization-rmurai0610 = {path = "submodules/diff_gaussian_rasterization_rmurai0610-0.0.0-cp311-cp311-win_amd64.whl"}
mypy = "^1.9.0"
devtools = "^0.12.2"
imageio = "^2.34.0"

[tool.poetry.group.dev.dependencies]
wheel = "^0.42.0"
build = "^1.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

